--- a/_projects/2024-09-10-tictac-1.md
+++ b/_projects/2024-09-10-tictac-1.md
@@ -1,3 +1,13 @@
+---
+layout: talk
+title: "tictac for reinforcement learning"
+type: "Projects"
+author_profile: true
+permalink: /projects/2024-09-10-tictac-1
+venue: "Goettingen"
+date: 2024-09-10
+location: "Goettingen, Germany"
+---
 I made a simple tictac game, to try what I am learning in reinforcement learning in a simple c++ env. You can see an eaxmple of the it here smart agent vs random agent:
 ![smart agent vs random agent](../images/rl.png)
 
